# notebooks

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: generate-readme.yml  test-notebooks.yml
assets/: README.template.md
examples/: autoimmune_credible_set.ipynb
notebooks/: autoimmune_colocalisations.ipynb  autoimmune_credible_set.ipynb  chembl_evidence_download.ipynb  exploring_ot_datasets.ipynb  reading_data_from_aws.ipynb
scripts/: run_notebook_test.sh  setup_gcp.sh
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: __init__.py  conftest.py  test_notebooks.py
utils/: readme.py
