[project]
name = "notebooks"
version = "0.1.0"
description = "Tutorial notebooks using Open Targets Platform Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[distributed]>=2025.9.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "pyspark>=3.5.0,<4.0.0",
    "ray>=2.49.2",
]
